<resources>
    <string name="app_name">Ribbitt</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="usernamehint">Username</string>
    <string name="passwordhint">Password</string>
    <string name="phonehint">Phone</string>
    <string name="login_button">SIGN IN</string>
    <string name="sign_up_text">Don\'t have an account? Sign Up!</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="emailhint">Email</string>
    <string name="signUpButtonLabel">SIGN UP</string>
    <string name="cancelButtonLabel">CANCEL</string>
    <string name="signup_error_message">Please make sure you enter a username,password and email address</string>
    <string name="signup_error_title">Oops!!!</string>
    <string name="login_error_message">Please make sure you enter a username and password!</string>
    <string name="login_error_title">Oops!!!</string>
    <string name="logout">Logout</string>
    <string name="inbox">Inbox</string>
    <string name="friends">Friends</string>
    <string name="title_section1">Inbox</string>
    <string name="title_section2">Friends</string>
    <string name="empty_inbox_label">No Inbox msgs</string>
    <string name="empty_friends_label">Add Friends to begin</string>
    <string name="menu_edit_friends_label">Edit Friends</string>
    <string name="title_activity_edit_friends">Edit Friends</string>
    <string name="error_title">We are sorry</string>
    <string name="menu_camera_label">Camera</string>
    <string name="general_error">Sorry there was an error!</string>
    <string name="error_opening_file">There was error in opening the file</string>
    <string name="video_file_size_warning">The selected video must be less than 10 MB</string>
    <string name="error_file_size_too_large">Selected File is too large,please select new file</string>
    <string name="error_external_storage">There was problem accessing your device\'s external storage</string>
    <string-array name="camera_choices">
        <item>Take Picture</item>
        <item>Take Video</item>
        <item>Choose Picture</item>
        <item>Choose Video</item>
    </string-array>
    <string name="title_activity_recipients">Choose Recipients</string>
    <string name="empty_recipients_list_message">Choose some friends friends!</string>
    <string name="error_sending_message">There was an error sending your message,Please try again</string>
    <string name="success_message">Message Sent</string>
    <string name="error_selecting_file_title">We are sorry</string>
    <string name="error_selecting_file">There was an error with the selected file.Please select another file</string>
    <string name="title_activity_viewimage">Ribbitt</string>
    <string name="push_message">"You have a new Ribbitt message from %s!"</string>
</resources>
