<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:theme="@style/AppTheme.AppBarOverlay"
    tools:context=".ui.MainActivity" >


    <item android:id="@+id/inbox"
        android:title="@string/inbox"
        android:orderInCategory="100"
        app:showAsAction="always" />

    <item android:id="@+id/friends"
        android:title="@string/friends"
        android:orderInCategory="100"
        app:showAsAction="always" />

    <item android:id="@+id/logout"
        android:title="@string/logout"
        android:orderInCategory="100"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/action_edit_friends"
        android:title="@string/menu_edit_friends_label"
        android:orderInCategory="100"
        app:showAsAction="always" />

    <item android:id="@+id/action_camera"
        android:title="@string/menu_camera_label"
        android:orderInCategory="100"
        android:icon="@drawable/ic_action_camera"
        app:showAsAction="always" />



</menu>
